indiv stud added

--- a/schooldjango/templates/home.html
+++ b/schooldjango/templates/home.html
@@ -11,6 +11,7 @@
 <a href="/app1/list_students"><h2>View our Student List</h2></a>
 <a href="/app1/list_department"><h2>View our Department List</h2></a>
 <a href="/app1/register "><h2>Register a new student</h2></a>
+<a href="/app1/individual "><h2>View individual student</h2></a>
 
 </body>
 </html>
