--- a/schooldjango/templates/register.html
+++ b/schooldjango/templates/register.html
@@ -16,7 +16,7 @@
         {{error}}
 
       <label>Name</label>
-        <input type="text" name="name">
+        <input type="text" name="name" style="color:red;">
         <br>
         <label>Roll No.</label>
         <input type="text" name="rollno">
