--- a/schooldjango/templates/indiv.html
+++ b/schooldjango/templates/indiv.html
@@ -27,7 +27,7 @@
 <ul>
     {% for s in stud %}
        <a href="/app1/individual?name={{s.name}}"> <li>{{ s.name }}</li></a>
-    {% ifequal selstud.name s.name %}
+   {% ifequal selstud.name s.name %}
 
    <table>
     <tr>
@@ -42,9 +42,10 @@
         <td>{{ selstud.name }}</td>
         <td>{{ selstud.department }}</td>
         <td>{{ selstud.city }}</td>
+        <td><a href="/app1/delete?name={{selstud.name}}"><button>Delete</button></a></td>
     </tr>
 </table>
-    {% endifequal %}
+   {% endifequal %}
     {% endfor %}
 </ul>
 
